fix: remove min-width container is centered using auto. shrinking will cause odd behavior. need to add overflow-x auto to .app and fix container centering, maybe with flex

--- a/ui/components/ui/page-container/index.scss
+++ b/ui/components/ui/page-container/index.scss
@@ -13,8 +13,6 @@
   border-radius: 8px;
   overflow-y: auto;
 
-  min-width: 320px;
-
   @include design-system.screen-sm-min {
     width: $width-screen-sm-min;
   }
